--- a/src/components/StartMenu/StartMenu.scss
+++ b/src/components/StartMenu/StartMenu.scss
@@ -107,16 +107,16 @@
     grid-auto-rows: auto;
     gap: var(--spacing-vertical-s);
     width: 100%;
-    height: 50%;
+    height: fit-content;
   }
 
   &__recommended-apps {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     gap: var(--spacing-vertical-s);
     width: 100%;
-    height: 50%;
+    height: fit-content;
   }
 
   &__category {
@@ -125,8 +125,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 4rem;
-    padding: var(--spacing-vertical-l) var(--spacing-horizontal-l);
+    height: 3rem;
+    padding: var(--spacing-vertical-s) var(--spacing-horizontal-s);
   }
 
   &__category-title {
